<resources>
    <string name="app_name" translatable="false">AlarmLocation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text">Hello</string>
    <string name="title_activity_maps">Map</string>

    <string name="add_rules">Alarm type to add ?</string>
    <string-array name="add_choice">
        <item>Position</item>
        <item>Rule</item>
    </string-array>

    <string name="choice_action">Choose an action</string>
    <string-array name="items_choice">
        <item>Modify</item>
        <item>Delete</item>
    </string-array>

    <string name="are_you_sure">Delete the task </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="AlarmLocation" translatable="false">AlarmLocation</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="name_position">Name of the task</string>
    <string name="give_name_task">Give a name to the task</string>
    <string name="delete_element">Task deleted</string>
    <string name="modify">Modify</string>
    <string name="information">V Give information V</string>
    <string name="radius">Proximity</string>
    <string name="show_map">^ Return to the map ^</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="start_hour">Choose a start hour</string>
    <string name="end_hour">Choose a end hour</string>
    <string name="set_point">Set this point ?</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disable</string>
    <string name="rules">Rules</string>
    <string name="food_store">Food Store</string>
    <string name="supermarket">Supermarket</string>
    <string name="restaurant">Restaurant</string>
    <string name="hairdresser">Hairdresser</string>
    <string name="bar">Bar</string>
    <string name="cafe">Cafe</string>
    <string name="keyword">Keyword</string>
    <string name="enter_a_keyword">Enter a keyword</string>
    <string name="meters">meters</string>
</resources>
