<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:layout_gravity="bottom">

    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_title"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/cast_libraries_material_featurehighlight_text_header_color"
            android:textSize="24sp"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:layout_weight="1">

            <TextView
                android:text="@string/name_position"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPlaceAddress"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:elevation="1dp" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sw_enabled"
                android:elevation="0dp"
                android:checked="true"
                android:layout_marginEnd="30sp" />

        </LinearLayout>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etxt_taskname"
            android:layout_marginLeft="20sp"
            android:fontFamily="sans-serif"
            android:hint="@string/give_name_task"
            android:textSize="14sp"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="top">

        <TextView
            android:layout_height="match_parent"
            android:id="@+id/txt_radius"
            android:gravity="bottom|center"
            android:text="0"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_marginBottom="10sp"
            android:textSize="15sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                    android:text="@string/radius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPlaceLocation"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="sans-serif"
                    android:gravity="bottom"
                    android:textSize="18sp" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sk_radius_pos" />

        </LinearLayout>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/check_schedule"
            android:layout_weight="0.5"
            android:elevation="0dp"
            android:gravity="top|bottom|start" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:gravity="center"
                android:textSize="16sp" />

            <TextView
                android:text="00:00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_start"
                android:textSize="16sp"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:gravity="center"
                android:textSize="16sp" />

            <TextView
                android:text="00:00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_end"
                android:textSize="16sp"
                android:gravity="center"
                android:clickable="true" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif"
        android:gravity="bottom"
        android:textSize="18sp"
        android:layout_weight="1" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etxt_address"
            android:layout_marginLeft="20sp"
            android:layout_weight="3"
        android:textSize="14sp" />

        <ImageView
            app:srcCompat="@android:color/transparent"
            android:id="@+id/imageViewStreetView"
            android:layout_width="match_parent"

            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:contentDescription="" />

        <Button
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddPlace"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp"
            android:layout_weight="1" />

</LinearLayout>

